# system-principles

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
config/claude/agents/principles/: AGENT.md
config/claude/rules/: frontend.md
config/claude/skills/challenge-testing/: SKILL.md
config/claude/skills/coherence-analysis/: SKILL.md
config/claude/skills/concept-actions/: SKILL.md
config/claude/skills/concept-artifacts/: SKILL.md
content/: AB1.md  AB2.md  AB3.md  AB4.md  BD1.md  BD2.md  BD3.md  BD4.md  BD5.md  BD6.md  BT1.md  BT2.md  CB1.md  CB2.md  CB3.md  CB4.md  CH1.md  CH2.md  CH3.md  CH4.md  CL1.md  CL2.md  DDI1.md  DDI2.md  DDI3.md  DDI4.md  EF1.md  EV1.md  LG1.md  LG2.md  LG3.md  LG4.md  LY1.md  LY2.md  LY3.md  LY4.md  LY5.md  LY6.md  LY7.md  LY8.md  (+263 more)
content/designing/abstraction/: AB1.md
content/designing/boundaries/: BD1.md  BD2.md
docs/: index.md
docs/principles/: dependencies.md  design.md  designing.md  implementing.md  index.md  layout.md  mocking.md  modeling.md  polymorphism.md  projects.md  structuring.md  testing.md  translators.md  typing.md  ui-tooling.md  verifying.md  visual-design.md
docs/rules/: dependencies.md  design.md  projects.md
markdown/: implementing.md  index.md  modeling.md  presenting.md
python/: boundaries.py
scripts/: convert_markdown.py  migrate_to_taxonomies.py  rename_principles.py
sets/: core.yaml
src/principles/: __init__.py  main.py  search.py  types.py  validation.py
src/principles/cli/: parse_args.py
src/principles/export/: __init__.py  claude_code.py
src/principles/logging/: logger.py
src/principles/site/: __init__.py  builder.py  contrast_check.py  markdown.py  scripts.py  server.py  styles.py  templates.py
src/principles/translators/: __init__.py  frontmatter.py  principle_loader.py  set_loader.py  taxonomy_loader.py
taxonomies/: default.yaml
tests/: conftest.py  test_concept_artifact_validator.py  test_main.py  test_projection_preview_renderer.py  test_search.py  test_validation.py
tests/cli/: test_cli.py  test_search.py  test_validate.py
tests/logging/: test_configure_logging.py  test_get_logger.py
tests/site/: test_contrast_check.py  test_markdown.py  test_templates.py
(+48 files in other folders)
