[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "principles"

[project]
name = "system-principles"
version = "0.1.0"
description = "Manage and apply system design principles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
principles = "principles.main:main"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "referencing>=0.37.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a21",
    "types-jsonschema>=4.26.0.20260202",
    "types-pyyaml>=6.0",
]

[tool.mypy]
files = ["src"]
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
extra_checks = true
follow_imports = "silent"  # Change to "error"
ignore_missing_imports = false
implicit_reexport = false
namespace_packages = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "possibly-undefined",
    "redundant-self",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["principles"]
